# ConstraintKinds

./: .gitignore  ConstraintKinds.cabal  README.md
src/Control/: ConstraintKinds.hs
src/Control/ConstraintKinds/: .Applicative.hs.swp  .Category.hs.swp  .Functor.hs.swp  .Monad.hs.swp  Applicative.hs  Category.hs  Filterable.hs  Foldable.hs  Functor.hs  Lengthable.hs  Monad.hs  Partitionable.hs  Pointed.hs  Traversable.hs
src/Control/ConstraintKinds/Monad/: Trace.hs
